--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
 <h2> This is my HTML2 Homepage </h2>
+<html lang="en">
+  <head>
+    <title>HTML and CSS AUthoring 1</title>
+  </head>
+
+  <body>
+    <h1>HTML and CSS Authoring 1</h1>
+    <h3>Jocelyn Acosta Mendoza</h3>
+    <h3>Spring Semester 2025</h3>
+
+    <ul>
+      <li> <a href="cat-photos/index.html"> Cat Photos App</a>a></li>
+    </ul>
+  </body>
+</html>
