--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h3>Spring Semester 2025</h3>
 
     <ul>
-      <li> <a href="cat-pictures/index.html"> Cat Photos App</a>a></li>
+      <li><a href="cat-pictures/index.html"> Cat Photos App</a></li>
     </ul>
   </body>
 </html>
