--- a/index.html
+++ b/index.html
@@ -3,6 +3,30 @@
     <title>HTML and CSS AUthoring 1</title>
   </head>
 
+  <style>
+    body{
+        background-color:rgb(254, 207, 236);
+        font-family:'Times New Roman', Times, serif;
+        padding: 50px;
+        color:rgb(72, 10, 91);
+    }
+    h1{
+        font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color:rgb(67, 141, 28);
+    }
+    a:link, 
+    a:visited,
+    a:hover {
+        color:rgb(235, 39, 72);
+        font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    }
+
+    a:hover{
+        color:coral;
+        text-decoration: none;
+    }
+  </style>
+
   <body>
     <h1>HTML and CSS Authoring 1</h1>
     <h3>Jocelyn Acosta Mendoza</h3>
