--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
     <ul>
       <li><a href="cat-pictures/index.html">Cat Photos App</a></li>
+      <li><a href="gallery/index.html">Gallery</a></li>
     </ul>
   </body>
 </html>
